<resources>
    <string name="app_name">Guessing Game</string>
    <string name="inputPlayerName">請輸入玩家姓名</string>
    <string name="inputNameStartGame">請輸入姓名以開始遊戲</string>
    <string name="scissor">剪刀</string>
    <string name="stone">石頭</string>
    <string name="paper">布</string>
    <string name="mora">猜拳</string>
    <string name="name">名字</string>
    <string name="winner">勝利者</string>
    <string name="me_mora">我方出拳</string>
    <string name="pc_mora">電腦出拳</string>
</resources>